--- a/ReportGeneration/package.json
+++ b/ReportGeneration/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+     "@angular/cdk": "^5.1.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
@@ -25,7 +26,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14",
-    "angular2-fontawesome": "^0.9.3"
+    "angular2-fontawesome": "^0.9.3",
+    "@angular/material": "^5.1.1"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.3",
