--- a/ReportGeneration/package.json
+++ b/ReportGeneration/package.json
@@ -13,21 +13,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
-     "@angular/cdk": "^5.1.1",
+    "@angular/cdk": "^5.1.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.1.1",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-in-memory-web-api": "^0.5.3",
+    "angular2-fontawesome": "^0.9.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "angular2-fontawesome": "^0.9.3",
-    "@angular/material": "^5.1.1"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.3",
