--- a/ReportGeneration/package.json
+++ b/ReportGeneration/package.json
@@ -28,7 +28,9 @@
     "angular5-csv": "^0.2.10",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.8",
     "rxjs": "^5.5.2",
+    "xlsx": "^0.12.11",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
