--- a/ReportGeneration/package.json
+++ b/ReportGeneration/package.json
@@ -26,6 +26,7 @@
     "angular-in-memory-web-api": "^0.5.3",
     "angular2-fontawesome": "^0.9.3",
     "angular5-csv": "^0.2.10",
+    "auth0-js": "^9.5.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.8",
